--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,6 +23,9 @@
       <height>461</height>
      </rect>
     </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
       <string>Tab 1</string>
@@ -79,13 +82,13 @@
        <string>East</string>
       </property>
      </widget>
-     <widget class="QTextBrowser" name="textBrowser">
+     <widget class="QTextBrowser" name="textBrowser_1">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>50</y>
-        <width>256</width>
-        <height>192</height>
+        <x>15</x>
+        <y>1</y>
+        <width>301</width>
+        <height>241</height>
        </rect>
       </property>
      </widget>
@@ -99,14 +102,17 @@
        </rect>
       </property>
      </widget>
-     <widget class="QTextEdit" name="MyTextEdit">
+     <widget class="QPushButton" name="map">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>250</y>
-        <width>191</width>
+        <x>439</x>
+        <y>281</y>
+        <width>121</width>
         <height>51</height>
        </rect>
+      </property>
+      <property name="text">
+       <string>Map</string>
       </property>
      </widget>
     </widget>
@@ -114,6 +120,16 @@
      <attribute name="title">
       <string>Tab 2</string>
      </attribute>
+     <widget class="QTextBrowser" name="textBrowser_2">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>10</y>
+        <width>471</width>
+        <height>291</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
